[tool.poetry]
name = "repl-nix-attachmentanalyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.2"
openai = "1.3.5"
flask-login = "0.6.2"
flask-sqlalchemy = "3.0.5"
flask-wtf = "1.1.1"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
reportlab = "4.0.4"
werkzeug = "2.3.6"
sqlalchemy = "2.0.19"
requests = "2.31.0"
wtforms = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
